[workspace]
resolver = "2"
members = [
    "compiler/abyss_lexer",
    "compiler/abyss_parser",
    "compiler/abyss_codegen",
]


[package]
name = "abyss"
version = "0.1.0"
edition = "2024"

[dependencies]
abyss_lexer = { path = "./compiler/abyss_lexer" }
abyss_parser = { path = "./compiler/abyss_parser" }
abyss_codegen = { path = "./compiler/abyss_codegen" }
